# log4j-detector-to-csv

./: README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
log4j_detector_to_csv/: main.py
